fixed spacing on personal info details header

--- a/public/master.css
+++ b/public/master.css
@@ -1412,6 +1412,10 @@ input:focus {
   position: relative;
   top: 0.6rem;
 }
+.ViewLabel.NoNav {
+  height: 14.3rem;
+  top: 4.3rem;
+}
 .PersInfo {
   height: 6rem;
   width: 40%;
