--- a/src/_styles/account_personalinfo_details.styl
+++ b/src/_styles/account_personalinfo_details.styl
@@ -1,3 +1,8 @@
+.ViewLabel.NoNav {
+	height: 14.3rem;
+	top:4.3rem;
+}
+
 .PersInfo {
 	height: 6rem;
 	width: 40%;
